--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 body {
     background-image: url('https://github.com/Benjihunt97/Todo-list/blob/main/bg-desktop-dark.jpg?raw=true');
     background-repeat: no-repeat;
+    background-size: 100% 45%;
     background-color: #181824;
     
 }
