--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background-repeat: no-repeat;
     background-size: 100% 45%;
     background-color: #181824;
-    
+    overflow-x: hidden;
 }
 
 .list {
